--- a/PlaygroundLogger/PlaygroundLogger_iOS/PlaygroundLogger_iOS-Info.plist
+++ b/PlaygroundLogger/PlaygroundLogger_iOS/PlaygroundLogger_iOS-Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>8500</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014 Apple Inc. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
