Introduced a new framework, LegacyPlaygroundQuickLookSupport.
This framework provides the PlaygroundQuickLook enum and the CustomPlaygroundQuickLookable protocol.
It is intended as a legacy transition shim, suitable for import into playgrounds targeting pre-Swift 5 so they continue to build even though the standard library no longer includes PlaygroundQuickLook or CustomPlaygroundQuickLookable.

As part of this, updated PlaygroundLogger to use LegacyPlaygroundQuickLookSupport when generating logger results.

--- a/swift-xcode-playground-support.xcworkspace/xcshareddata/xcschemes/BuildScript-iOS.xcscheme
+++ b/swift-xcode-playground-support.xcworkspace/xcshareddata/xcschemes/BuildScript-iOS.xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:PlaygroundSupport/PlaygroundSupport.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5E915197200DC54000CAAD2E"
+               BuildableName = "LegacyPlaygroundQuickLookSupport.framework"
+               BlueprintName = "LegacyPlaygroundQuickLookSupport"
+               ReferencedContainer = "container:LegacyPlaygroundQuickLookSupport/LegacyPlaygroundQuickLookSupport.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
