--- a/swift-xcode-playground-support.xcworkspace/xcshareddata/xcschemes/BuildScript-tvOS.xcscheme
+++ b/swift-xcode-playground-support.xcworkspace/xcshareddata/xcschemes/BuildScript-tvOS.xcscheme
@@ -48,6 +48,20 @@
                ReferencedContainer = "container:PlaygroundSupport/PlaygroundSupport.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5E915197200DC54000CAAD2E"
+               BuildableName = "LegacyPlaygroundQuickLookSupport.framework"
+               BlueprintName = "LegacyPlaygroundQuickLookSupport"
+               ReferencedContainer = "container:LegacyPlaygroundQuickLookSupport/LegacyPlaygroundQuickLookSupport.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
