[PlaygroundLogger] Adopted Xcode 11.3's project modernizations.
As part of this, updated Release.xcconfig to enable whole-module optimization the "new" way (from several Xcode releases prior).

This addresses <rdar://problem/59412597>.

--- a/XcodeConfig/Release.xcconfig
+++ b/XcodeConfig/Release.xcconfig
@@ -13,7 +13,8 @@
 #include "Common.xcconfig"
 
 // Compile Swift code at -O with WMO enabled in Release.
-SWIFT_OPTIMIZATION_LEVEL = -Owholemodule
+SWIFT_OPTIMIZATION_LEVEL = -O
+SWIFT_COMPILATION_MODE = wholemodule
 
 // Compile C/Objective-C/C++ code at -Os in Release.
 GCC_OPTIMIZATION_LEVEL = s
